# kdotp-fke

./: .gitignore  AUTHORS  LICENSE  Makefile.am  absorption.c  absorption.h  autogen.sh  box.c  box.h  calc-gamma.c  calc-gamma.h  calc-theta.h  coeffs-pert-other.c  coeffs-pert.c  configure.ac  diagonalize.c  diagonalize.h  gamma-spline.c  gamma-spline.h  gsl_util.h  integration.c  integration.h  k-dot-p.c  k-dot-p.h  matrix-element-pert.c  matrix-element-pert.h  onephoton.c  pert-ode.c  pert-ode.h  px14.txt  px8.txt  py14.txt  py8.txt  pz14.txt  pz8.txt  saveV.c  savebands.c  savem.c  tensors.h  three-vector.c  (+10 more)
